--- a/S3.md
+++ b/S3.md
@@ -37,7 +37,8 @@
 - Create a bucket `aws s3 mb s3://bucket-name` mb stands for make bucket, the path s3://, naming convention you cannot use underscore and special letters only letters numbers and dashes
 - Go on S3 on AWS and check the bucket
 - Create a file using either `sudo nano` or `sudo vi`
-- copy file and send to s3  `aws s3 cp name_file s3://bucket_name`
+- copy file from EC2 to S3  `aws s3 cp name_file s3://bucket_name`
+- Download file from S3 to EC2 `aws s3 cp s3://bucket-name/test.txt test.txt`
 You cannot delete a bucket that has content in it
 - so you either manually go empty the bucket and run `aws s3 rb s3://bucket_name`
 - or `aws s3 rm s3://bucket_name/ --recursive` and then `aws s3 rb s3://bucket_name`
